--- a/app/globals.css
+++ b/app/globals.css
@@ -3,17 +3,20 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+}*/
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+max-width: 100vw;
+width: 100vw;
+overflow-x: hidden;
+background: #FFFFFF;
+
 }
 
 body {
@@ -35,8 +38,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+}*/
